@@ -1,3 +1,6 @@
+4558.	[bug]		Synthesised CNAME before matching DNAME was still
+			being cached when it should have been.  [RT #44318]
+
 4557.	[security]	Combining dns64 and rpz can result in dereferencing
 			a NULL pointer (read).  (CVE-2017-3135) [RT#44434]
 
